# trust-platform

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  nightly-reliability.yml  release.yml
crates/trust-debug/src/adapter/: io.rs  paused.rs  tests.rs  (+1 more)
crates/trust-runtime/: Cargo.toml
crates/trust-runtime/src/: bundle_template.rs  config.rs  execution_backend.rs  lib.rs  memory.rs  metrics.rs  settings.rs
crates/trust-runtime/src/bytecode/encoder/: consts.rs  refs.rs
crates/trust-runtime/src/bytecode/encoder/codegen/: dynamic_access.rs  expr.rs  expr_supported.rs  stmt_core.rs
crates/trust-runtime/src/bytecode/format/: pou.rs
crates/trust-runtime/src/bytecode/validate/: module_validate.rs  pou_and_instr.rs  tables_consts.rs
crates/trust-runtime/src/config/: contracts.rs  parser.rs  tests.rs
crates/trust-runtime/src/config/parser/validation/runtime/: entry.rs
crates/trust-runtime/src/control/: config_handlers_get.rs  config_handlers_set.rs  status_handlers.rs
crates/trust-runtime/src/control/tests/: core.rs
crates/trust-runtime/src/debug/: dap.rs
crates/trust-runtime/src/debug/control/api/: watch_stream.rs
crates/trust-runtime/src/eval/expr/: access.rs  lvalue.rs
crates/trust-runtime/src/eval/expr/call/: arg_read.rs  split_call.rs  stdlib_args.rs  target_resolution.rs
crates/trust-runtime/src/harness/: build.rs  harness.rs  parse.rs
crates/trust-runtime/src/harness/compiler/: config.rs  model.rs  pou.rs  types.rs
crates/trust-runtime/src/harness/compiler/config/: entry.rs  globals_access.rs
crates/trust-runtime/src/harness/compiler/pou/: class_vars.rs  entry_points.rs  function_block_vars.rs  function_vars.rs  node_lowering.rs  program_vars.rs
crates/trust-runtime/src/harness/lower/: mod.rs
crates/trust-runtime/src/harness/lower/expr/: constants.rs  literals.rs
crates/trust-runtime/src/historian/: metrics.rs
crates/trust-runtime/src/realtime/: realtime_tests_part_01.rs
crates/trust-runtime/src/retain/: codec.rs
crates/trust-runtime/src/runtime/: backend.rs  bytecode.rs  core.rs  cycle.rs  metrics_subsystem.rs  mod.rs  online_change.rs
crates/trust-runtime/src/runtime/core/: accessors.rs  diagnostics.rs  lifecycle.rs
crates/trust-runtime/src/runtime/vm/: call.rs  const_pool.rs  debug_map.rs  dispatch.rs  dispatch_ops.rs  dispatch_refs.rs  dispatch_sizeof.rs  errors.rs  frames.rs  mod.rs  register_ir.rs  stack.rs
crates/trust-runtime/src/scheduler/: runner_loop.rs
crates/trust-runtime/src/stdlib/fbs/: bistable.rs  counters.rs  instance.rs  mod.rs  timers.rs  triggers.rs
crates/trust-runtime/src/value/: defaults.rs  types.rs
crates/trust-runtime/src/web/: deploy.rs  ide_tasks.rs
crates/trust-runtime/src/web/deploy/: tests.rs
crates/trust-runtime/src/web/ui/: ide.html
crates/trust-runtime/src/web/ui/chunks/ide-css/: ide-01.css  ide-05.css
crates/trust-runtime/src/web/ui/chunks/ide-js/: ide-01.js  ide-02.js  ide-03.js
crates/trust-runtime/src/web/ui/modules/: ide-online.js
crates/trust-runtime/tests/: api_smoke.rs  bytecode_encoder.rs  bytecode_metadata.rs  bytecode_validation.rs  bytecode_vm_core.rs  bytecode_vm_differential.rs  debug_control.rs  debug_stepping.rs  e2e_full_grammar.rs  e2e_scheduler.rs  errors.rs  expr_access.rs  expr_calls.rs  expr_full.rs  hot_reload.rs  pou_class.rs  pou_oop.rs  pou_program.rs  retain_store.rs  runtime_events.rs  stdlib_enum_validate.rs  stdlib_numeric_full.rs  stdlib_select_full.rs  stmt_assign_attempt.rs  stmt_full.rs  stmt_jmp.rs  tasks_fb.rs  tutorial_examples.rs  types_bit_access.rs  types_user.rs  vars_access.rs
crates/trust-runtime/tests/bytecode_encoder/: bytecode_encoder_part_04.rs  bytecode_encoder_part_06.rs
crates/trust-runtime/tests/web_ide_integration/: web_ide_integration_part_09.rs
docs/: IEC_DECISIONS.md  IEC_DEVIATIONS.md  README.md  release-gate-checklist.md
docs/diagrams/: manifest.json
docs/diagrams/architecture/: runtime-execution.puml  system-architecture.puml
docs/guides/: GETTING_STARTED.md  PLCOPEN_LD_INTEROP.md  RUNTIME_EXECUTION_BACKEND_MIGRATION.md
docs/reports/: salsa-memory-baseline.env
docs/specs/: 10-runtime.md  11-ladder-diagram.md  12-ladder-profile-trust.md  13-visual-editors-runtime-unification.md  README.md
docs/specs/coverage/: iec-table-test-map.toml  ld-coverage.md
editors/vscode/: package-lock.json  package.json  tsconfig.json  tsconfig.webview.json
editors/vscode/media/: blocklyWebview.css  blocklyWebview.css.map  blocklyWebview.js  ladderWebview.css  ladderWebview.css.map  ladderWebview.js  ladderWebview.js.map  sfcWebview.css  sfcWebview.css.map  sfcWebview.js  sfcWebview.js.map  stateChartWebview.css  stateChartWebview.css.map  stateChartWebview.js  stateChartWebview.js.map
editors/vscode/scripts/: build-sfc-webview.js
editors/vscode/snippets/: st.code-snippets
editors/vscode/src/: binary.ts  debug.ts  extension.ts  ioPanel.ts  ioPanel.webview.js
examples/blockly/: snake-simple-v2.st  snake-simple-v2.visual.runtime.st
examples/ladder/: README.md  ethercat-snake.ladder.json  ethercat-snake.st  ethercat-snake.visual.runtime.st  simple-start-stop.ladder.json  simple-start-stop.st  simple-start-stop.visual.runtime.st
examples/sfc/: SFC_PARALLEL_README.md  ethercat-snake-advanced.sfc.json  ethercat-snake-simple.sfc.json  sfc_parallel_branches_example.sfc  sfc_simple_parallel.sfc
examples/statecharts/: ETHERCAT_SNAKE_README.md  HARDWARE_EXECUTION.md  QUICK_START_PLC_SERVICE.md  README.md  demo-hardware-mode.sh  ethercat-snake-simple.st  ethercat-snake-simple.visual.runtime.st  ethercat-snake.st  ethercat-snake.visual.runtime.st  quick-start-hardware.sh  test-hardware-now.sh  traffic-light.st  traffic-light.visual.runtime.st
scripts/: check_mp001_split_parity.sh  runtime_vm_bench_compare.sh  runtime_vm_bench_gate.sh  runtime_vm_determinism_reliability_gate.sh  runtime_vm_differential_gate.sh  runtime_vm_production_backend_guard.sh  salsa_fuzz_gate.sh  salsa_memory_gate.sh
tests/fixtures/mp001/: hir-type-checking-test-discovery-baseline.list  lsp-test-discovery-baseline.list
(+109 files in other folders)
