[workspace]
resolver = "2"
members = [
    "crates/trust-debug",
    "crates/trust-syntax",
    "crates/trust-hir",
    "crates/trust-ide",
    "crates/trust-lsp",
    "crates/trust-runtime",
    "crates/trust-wasm-analysis",
]

[workspace.package]
version = "0.9.17"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/johannesPettersson80/trust-platform"
rust-version = "1.85"
authors = ["Johannes Pettersson <johannes_salomon@hotmail.com>"]
keywords = ["lsp", "plc", "iec61131", "structured-text", "automation"]
categories = ["development-tools", "text-editors"]

[workspace.dependencies]
# Syntax
logos = "0.14"
rowan = "0.15"
text-size = "1.1"

# Semantic analysis
salsa = "0.26"

# LSP
tower-lsp = "0.20"
lsp-types = "0.95"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
qrcode = "0.14"
urlencoding = "2"
percent-encoding = "2"
roxmltree = "0.20"
wasm-bindgen = "0.2"

# Error handling
thiserror = "1"
anyhow = "1"

# Testing
expect-test = "1.4"
insta = { version = "1", features = ["glob"] }

# Utilities
smol_str = "0.2"
rustc-hash = "1.1"
indexmap = "2"
drop_bomb = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1.19"
parking_lot = "0.12"
crossbeam-channel = "0.5"
glob = "0.3"
crc32fast = "1"
ratatui = "0.26"
crossterm = "0.27"
dialoguer = "0.11"
indicatif = "0.17"
owo-colors = "4"
rumqttc = "0.24"

# Internal crates
trust-syntax = { path = "crates/trust-syntax" }
trust-hir = { path = "crates/trust-hir" }
trust-ide = { path = "crates/trust-ide" }
trust-runtime = { path = "crates/trust-runtime" }
trust-wasm-analysis = { path = "crates/trust-wasm-analysis" }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"

[profile.release]
lto = true
codegen-units = 1

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3
